--- a/style.css
+++ b/style.css
@@ -220,9 +220,7 @@ main {
     }
 
     .outputBox {
-        position: absolute;
-        top: 75%;
-        width: 86%;
+        width: 95%;
         padding: 1rem;  
         border-radius: 1rem;
         justify-content: space-evenly;
@@ -250,6 +248,7 @@ main {
     }
 
     .copyToClipboard {
+        margin-top: 1rem;
         min-height: 4rem;
     }
 }
@@ -261,6 +260,7 @@ main {
     }
 
     main {
+        justify-content: space-evenly;
         min-height: 100vh;
         height: 100%;
     }
@@ -269,7 +269,7 @@ main {
         margin-top: 1rem;
         display: flex;
         width: 100%;
-        height: 80%;
+        min-height: 80%;
         flex-direction: column;
         justify-content: space-evenly;
     }
@@ -302,11 +302,9 @@ main {
     }
 
     .outputBox {
-        position: absolute;
-        top: 82%;
-        width: 82%;
+        width: 90%;
         border-radius: 1rem;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
     }
 
@@ -322,11 +320,12 @@ main {
         font-size: 1rem;
         width: 100%;
         min-height: 10%;
-        max-height: 100%;
-        margin-bottom: 1rem;
+        max-height: 90%;
+        margin-bottom: 3rem;
     }
 
     .copyToClipboard {
+        margin-top: 1rem;
         min-height: 4rem;
     }
 
